force-app/main/default/objects/Lead/fields/Address_Help__c.field-meta.xml
<CustomField>
    <fullName>Address_Help__c</fullName>
    <description>Guided imagery help text to inform the user that only a zip code is required to populate state and country. If the user is using salesforce1, then it will merely display text rather than an image.
3/2017</description>
    <formula>IF($User.UIThemeDisplayed = &quot;Theme3&quot;,
IMAGE(&quot;/resource/1488547561000/ZipCodeTip&quot;, &quot;Zip&quot;,75,400),
&quot;Edit the record to use the Address Search function&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please report any erroneous zip code mappings</inlineHelpText>
    <label>Address Help</label>
    <type>Text</type>
</CustomField>