force-app/main/default/objects/Lead/fields/Bounced_Date__c.field-meta.xml
<CustomField>
    <fullName>Bounced_Date__c</fullName>
    <description>If an SFDC email bounces, update this custom field from the Std Field, via workflow. Syncs to Marketo and they can update it as well. We need a custom field because standard fields are not available for us to display on Lead page layouts.</description>
    <label>Bounced Date</label>
    <type>Date</type>
</CustomField>