force-app/main/default/objects/Lead/fields/CityInitial__c.field-meta.xml
<CustomField>
    <fullName>CityInitial__c</fullName>
    <label>CityInitial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>