force-app/main/default/objects/Lead/fields/Converted_Status__c.field-meta.xml
<CustomField>
    <fullName>Converted_Status__c</fullName>
    <description>Translates the Converted &quot;true or false&quot; flag into verbiage for display on graphs</description>
    <formula>IF(IsConverted  =  true, &quot;Converted&quot;, &quot;Active&quot;)</formula>
    <label>Converted Status</label>
    <type>Text</type>
</CustomField>