force-app/main/default/objects/Lead/fields/CountryInitial__c.field-meta.xml
<CustomField>
    <fullName>CountryInitial__c</fullName>
    <label>CountryInitial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>