force-app/main/default/objects/Lead/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <description>In &quot;,9),2))-5))&quot;Use -5 after Daylight Savings Time Ends, -4 during DST.</description>
    <formula>IF( 
LEN( 
TEXT(VALUE( 
Left( 
right( trim(TEXT(CreatedDate) ),9),2))-5)) = 1, 
&quot;0&quot;&amp; 
TEXT(VALUE( 
Left( 
right( trim(TEXT(CreatedDate) ),9),2))-5) 
&amp;&quot;:&quot;&amp;mid(right( trim(TEXT(CreatedDate) ),9),4,2), 
TEXT(VALUE( 
Left( 
right( trim(TEXT(CreatedDate) ),9),2))-5) 
&amp;&quot;:&quot;&amp;mid(right( trim(TEXT(CreatedDate) ),9),4,2) 
)</formula>
    <label>Created Time</label>
    <type>Text</type>
</CustomField>