force-app/main/default/objects/Lead/fields/D_B_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>D_B_Company_Type__c</fullName>
    <description>this data is fed in from the D&amp;B integration</description>
    <label>D&amp;B - Company Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>