force-app/main/default/objects/Lead/fields/D_B_Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>D_B_Doing_Business_As__c</fullName>
    <description>this data is fed in from the D&amp;B integration</description>
    <label>D&amp;B - Doing Business As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>