force-app/main/default/objects/Lead/fields/D_B_Rank_Number__c.field-meta.xml
<CustomField>
    <fullName>D_B_Rank_Number__c</fullName>
    <description>this data is fed in from the D&amp;B integration</description>
    <label>D&amp;B - Rank Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>