force-app/main/default/objects/Lead/fields/D_B_Total_Employees_Growth_Percent__c.field-meta.xml
<CustomField>
    <fullName>D_B_Total_Employees_Growth_Percent__c</fullName>
    <description>This is fed in from D&amp;B via data warehouse</description>
    <label>D&amp;B - Total Employees Growth Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>