force-app/main/default/objects/Lead/fields/D_B_Woman_Owned_Flag__c.field-meta.xml
<CustomField>
    <fullName>D_B_Woman_Owned_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is fed in from D&amp;B via data warehouse</description>
    <label>D&amp;B - Woman Owned Flag</label>
    <type>Checkbox</type>
</CustomField>