force-app/main/default/objects/Lead/fields/D_U_N_S__c.field-meta.xml
<CustomField>
    <fullName>D_U_N_S__c</fullName>
    <label>D-U-N-S Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>