force-app/main/default/objects/Lead/fields/Date_Created_Text_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Created_Text_Format__c</fullName>
    <description>Text value of the created date for display on the Account/Lead search page</description>
    <formula>TEXT(DATEVALUE( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When was this lead created?</inlineHelpText>
    <label>Date Created</label>
    <type>Text</type>
</CustomField>