force-app/main/default/objects/Lead/fields/Date_Last_Modified_by_Non_Admin__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Modified_by_Non_Admin__c</fullName>
    <description>a workflow will update this field anytime the lead is modified by someone other than System Admin, API Admin or Marketo Sync user.  Used to see if Sales is doing updates on their leads</description>
    <label>Date Last Modified by Non-Admin</label>
    <type>Date</type>
</CustomField>