force-app/main/default/objects/Lead/fields/Days_in_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Current_Stage__c</fullName>
    <formula>IF(
ISNULL(Status_Change_Date__c) ,
Today() -   DateValue(CreatedDate),  
Today() -  Status_Change_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Current Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>