force-app/main/default/objects/Lead/fields/Days_to_Convert__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Convert__c</fullName>
    <formula>ConvertedDate -  DATEVALUE(CreatedDate)</formula>
    <inlineHelpText>Calculates number of days from creation to conversion</inlineHelpText>
    <label>Days to Convert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>