force-app/main/default/objects/Lead/fields/Dead_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dead_Reason__c</fullName>
    <description>Reason for changing this Lead to a Type of Dead.</description>
    <inlineHelpText>What is the reason that this Lead is being changed to a Type of Dead?</inlineHelpText>
    <label>RejectReason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Equipment/Parts Inquiry</fullName>
            </value>
            <value>
                <fullName>Existing Contact - Customer Service Inquiry</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Fraud/Scam</fullName>
            </value>
            <value>
                <fullName>No response / Inaccurate Data</fullName>
            </value>
            <value>
                <fullName>Not a product fit</fullName>
            </value>
            <value>
                <fullName>Not Target Profile Fit</fullName>
            </value>
            <value>
                <fullName>Order Size</fullName>
            </value>
            <value>
                <fullName>Pricing / Competitor</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>System</fullName>
                <isActive>false</isActive>
                <label>System</label>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>TSB?</fullName>
                <isActive>false</isActive>
                <label>TSB?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>