force-app/main/default/objects/Lead/fields/defer_sundog_assignment__c.field-meta.xml
<CustomField>
    <fullName>defer_sundog_assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>defer sundog assignment</label>
    <type>Checkbox</type>
</CustomField>