force-app/main/default/objects/Lead/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Free text available and passed from FormAssembly service technician leads</description>
    <inlineHelpText>Free text passed from formassembly</inlineHelpText>
    <label>Division</label>
    <length>65</length>
    <type>Text</type>
</CustomField>