force-app/main/default/objects/Lead/fields/DnB_Confidence_Code__c.field-meta.xml
<CustomField>
    <fullName>DnB_Confidence_Code__c</fullName>
    <label>D&amp;B Confidence Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>