force-app/main/default/objects/Lead/fields/DNBIndustryCode__c.field-meta.xml
<CustomField>
    <fullName>DNBIndustryCode__c</fullName>
    <label>DNB Industry Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>