force-app/main/default/objects/Lead/fields/DomesticUltimateDunsNumber__c.field-meta.xml
<CustomField>
    <fullName>DomesticUltimateDunsNumber__c</fullName>
    <label>Domestic Ultimate Duns Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>