force-app/main/default/objects/Lead/fields/EI_Eloqua_Unmarketable_Checkbox_Lead__c.field-meta.xml
<CustomField>
    <fullName>EI_Eloqua_Unmarketable_Checkbox_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used with Eloqua integration - when a contact is marked &quot;unmarketable&quot; in Eloqua, it will pass the information to Salesforce. We will date/time stamp the &quot;unmarketable&quot; field on the Contact record and excluded any &quot;Unmarketable not equal to blank&quot; from being sent back to Eloqua through integration on Eloqua side.</description>
    <inlineHelpText>via Eloqua criteria</inlineHelpText>
    <label>Eloqua Unmarketable Checkbox</label>
    <type>Checkbox</type>
</CustomField>