force-app/main/default/objects/Lead/fields/Eloqua_Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Lead_Rating__c</fullName>
    <label>Eloqua Lead Rating</label>
    <length>2</length>
    <type>Text</type>
</CustomField>