force-app/main/default/objects/Lead/fields/Email_Consent_Details__c.field-meta.xml
<CustomField>
    <fullName>Email_Consent_Details__c</fullName>
    <description>Marketo - Email Consent Details.</description>
    <inlineHelpText>Marketo - Email Consent Details.</inlineHelpText>
    <label>Email Consent Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Self Selected</fullName>
            </value>
            <value>
                <fullName>Existing Business Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>