force-app/main/default/objects/Lead/fields/Email_Consent_Implicit__c.field-meta.xml
<CustomField>
    <fullName>Email_Consent_Implicit__c</fullName>
    <description>Marketo - Email Consent Implicit</description>
    <inlineHelpText>If Yes, consent is based upon an existing business relationship or inquiry with Veritiv. Electronic marketing messages can be sent per country or state legal regulations (e.g. CASL and GDPR). Implied consent expires over time.</inlineHelpText>
    <label>Email Consent Implicit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>