force-app/main/default/objects/Lead/fields/Email_DIR__c.field-meta.xml
<CustomField>
    <fullName>Email_DIR__c</fullName>
    <label>Email - Level 3</label>
    <type>Email</type>
</CustomField>