force-app/main/default/objects/Lead/fields/Email_GM__c.field-meta.xml
<CustomField>
    <fullName>Email_GM__c</fullName>
    <label>Email - Level 2</label>
    <type>Email</type>
</CustomField>