force-app/main/default/objects/Lead/fields/Email_Marketing_Suspended__c.field-meta.xml
<CustomField>
    <fullName>Email_Marketing_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marketing will not send emails to this customer</inlineHelpText>
    <label>Email Marketing Suspended</label>
    <type>Checkbox</type>
</CustomField>