force-app/main/default/objects/Lead/fields/Email_RVP__c.field-meta.xml
<CustomField>
    <fullName>Email_RVP__c</fullName>
    <label>Email - Level 1</label>
    <type>Email</type>
</CustomField>