force-app/main/default/objects/Lead/fields/Email_SM__c.field-meta.xml
<CustomField>
    <fullName>Email_SM__c</fullName>
    <label>Email - Level 3a</label>
    <type>Email</type>
</CustomField>