force-app/main/default/objects/Lead/fields/Email_SVP__c.field-meta.xml
<CustomField>
    <fullName>Email_SVP__c</fullName>
    <label>Email - Sales Leader</label>
    <type>Email</type>
</CustomField>