force-app/main/default/objects/Lead/fields/Employee_Range__c.field-meta.xml
<CustomField>
    <fullName>Employee_Range__c</fullName>
    <label>Employee Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - 25</fullName>
            </value>
            <value>
                <fullName>26 - 100</fullName>
            </value>
            <value>
                <fullName>101 - 500</fullName>
            </value>
            <value>
                <fullName>501 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>