force-app/main/default/objects/Lead/fields/Employees_Hoovers__c.field-meta.xml
<CustomField>
    <fullName>Employees_Hoovers__c</fullName>
    <description>Added &quot;Onsite&quot; on 4-12-17</description>
    <inlineHelpText>If the lead has been pushed from Market Insight (MI), will list the reported number of employees on site as reported by Dun &amp; Bradstreet data.</inlineHelpText>
    <label>Reported # of Employees Onsite</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>