force-app/main/default/objects/Lead/fields/Fortune1000Rank__c.field-meta.xml
<CustomField>
    <fullName>Fortune1000Rank__c</fullName>
    <inlineHelpText>To find a company&apos;s Fortune 1000 rank, visit fortune.com/tag/fortune-1000/</inlineHelpText>
    <label>Fortune 1000 Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>