force-app/main/default/objects/Lead/fields/FS_Govt_Interest_Mktg__c.field-meta.xml
<CustomField>
    <fullName>FS_Govt_Interest_Mktg__c</fullName>
    <description>Facilities Solutions Government Interest Marketing.</description>
    <label>FS Govt Interest Mktg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>