force-app/main/default/objects/Lead/fields/FS_LEAN_Interest_Mktg__c.field-meta.xml
<CustomField>
    <fullName>FS_LEAN_Interest_Mktg__c</fullName>
    <description>Facilities Solutions LEAN Interest - Marketing</description>
    <label>FS LEAN Interest Mktg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>