force-app/main/default/objects/Lead/fields/GlobalUltimateDunsNumber__c.field-meta.xml
<CustomField>
    <fullName>GlobalUltimateDunsNumber__c</fullName>
    <label>Global Ultimate Duns Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>