force-app/main/default/objects/Lead/fields/HasBounced__c.field-meta.xml
<CustomField>
    <fullName>HasBounced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If an SFDC email bounces, update this custom field from the Std Field, via workflow. Syncs to Marketo and they can update it as well. We need a custom field because standard fields are not available for us to display on Lead page layouts.</description>
    <label>Email Bounced</label>
    <type>Checkbox</type>
</CustomField>