force-app/main/default/objects/Lead/fields/Healthcare_GPO__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_GPO__c</fullName>
    <label>Healthcare GPO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Healthcare_GPO</valueSetName>
    </valueSet>
</CustomField>