force-app/main/default/objects/Lead/fields/Industry_Mktg__c.field-meta.xml
<CustomField>
    <fullName>Industry_Mktg__c</fullName>
    <description>Industry - Markeing.</description>
    <label>Industry Mktg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>