force-app/main/default/objects/Lead/fields/Lead_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age__c</fullName>
    <formula>TODAY() - (DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How long the Lead has been in the system. Data shows the longer the Lead Age, the less likely it will be to convert.</inlineHelpText>
    <label>Lead Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>