force-app/main/default/objects/Lead/fields/Lead_from_Eloqua__c.field-meta.xml
<CustomField>
    <fullName>Lead_from_Eloqua__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box is marked as True if the lead comes from Eloqua and has an Eloqua Lead Rating.</inlineHelpText>
    <label>Lead from Eloqua</label>
    <type>Checkbox</type>
</CustomField>