force-app/main/default/objects/Lead/fields/Lead_is_Converted__c.field-meta.xml
<CustomField>
    <fullName>Lead_is_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Built for Lightning Migration</description>
    <inlineHelpText>Used to determine if a lead is marked converted</inlineHelpText>
    <label>Lead is Converted</label>
    <type>Checkbox</type>
</CustomField>