force-app/main/default/objects/Lead/fields/Lead_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Process_Type__c</fullName>
    <formula>IF(  
OR (
CreatedBy.Profile.Name == &apos;Marketo Sync&apos; ,
CreatedBy.Profile.Name == &apos;Marketing - Lightning&apos; ,
CreatedBy.Profile.Name == &apos;API admin&apos;,
 ISPICKVAL ( LeadSource , &apos;Chat&apos;),  
ISPICKVAL ( LeadSource , &apos;Tech Leads&apos;)
) ,
&quot;Created FOR Rep&quot;,
&quot;Created BY Rep&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Process Type</label>
    <type>Text</type>
</CustomField>