force-app/main/default/objects/Lead/fields/Lead_Role__c.field-meta.xml
<CustomField>
    <fullName>Lead_Role__c</fullName>
    <defaultValue>&quot;Sales Primary Contact&quot;</defaultValue>
    <description>Field used to map to the Contact Role field on Lead Conversions for Sales Reps</description>
    <label>Lead Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Primary Contact</fullName>
                <default>true</default>
                <label>Sales Primary Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>