force-app/main/default/objects/Lead/fields/Lead_Score_Explicit__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Explicit__c</fullName>
    <label>Lead Score - Explicit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>