force-app/main/default/objects/Lead/fields/Lead_Score_Implicit__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Implicit__c</fullName>
    <label>Lead Score - Implicit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>